[package]
name = "m5stickc-plus-test"
version = "0.1.0"
authors = ["Satoshi Tanaka <overthere555@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-hal = "0.39.3"
mipidsi = "0.5.0"
display-interface-spi = "0.4.1"
embedded-hal = "1.0.0-alpha.9"
embedded-graphics = "0.7.1"

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"
